2012-10-14 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl: The footer of each page included
          the creation date.

2012-10-06 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl: New feature in the "Configuration Bits" tabs.
          The "CONFIGx" label thereafter shows the mask also.

2012-10-06 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl: Correction of a minor bug in
          the read_all_informations() function. If one of
          in field had a '<' or '>' characters, incorrectly
          recognized the borders of fields.

2012-10-03 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: New command line option: --list-support-differences

2012-09-25 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: Code cleaning.

2012-09-22 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl, tools/device-manager.pl: I changed of my
          email address.

2012-09-16 Borut Razem <borut.razem AT siol.net>
	* scripts/build/mingw/gputils.nsi,
	  scripts/build/mingw/make-mingw: install html-help

2012-09-14 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Minor code optimization. More accurate names.

2012-09-14 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/config-help.pl: Rename to tools/device-help.pl.

2012-09-14 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/config-help.pl: Support to the Shared RAM of pic14 MCUs.
	  Appear: The "RAM map" tab.

2012-09-12 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/config-help.pl: Support to the Linear RAM of enhanced
	  pic14 MCUs. Affected: The "Features" tab and tooltips on the
	  "RAM map" tab.

2012-09-12 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/config-help.pl: Code optimization. Warning the bottom
	  of "SFR map" pages, if the page belongs to 12 or 14 bits
	  MCU and bank number > 1.

2012-09-12 Molnar Karoly <molnarkaroly@users.sf.net>